--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
-    "gulp-sass": "^4.1.0"
+    "gulp-git": "^2.10.1",
+    "gulp-sass": "^4.1.0",
+    "gulp-zip": "^5.0.2"
   }
 }
