--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /node_modules
 /dist
+/5.0/display/Styles.xml
+/5.0/import/Styles.xml
+/5.0/printer/Styles.xml
+/5.0/queueinfo/Styles.xml
+/5.0/printer/app.css
+/5.0/printer/style.css
+/5.0/queueinfo/queueinfo.css
+/5.0/display/display.css
+/5.0/printer/_PageStart.cshtml
