--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-git": "^2.10.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-zip": "^5.0.2"
   }
