Exportiere zip Dateien

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,3 +16,5 @@ pipelines:
             - npm install -g gulp
             - cd 5.0
             - gulp
+          artifacts:
+            - dist/*
