--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-git": "^2.10.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-zip": "^5.0.2"
+    "gulp-zip": "^5.0.2",
+    "handlebars-helper-range": "^1.1.1"
   }
 }
