verschiebe app in eingenen Unterordner

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /5.0/import/Styles.xml
 /5.0/printer/Styles.xml
 /5.0/queueinfo/Styles.xml
-/5.0/printer/app.css
+/5.0/printer/app/app.css
 /5.0/printer/style.css
 /5.0/queueinfo/queueinfo.css
 /5.0/display/display.css
