--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,8 +12,9 @@ pipelines:
           caches:
             - node
           script: # Modify the commands below to build your repository.
+            - npm install -g gulp npm@7.24.2
             - npm install
-            - npm install -g gulp
+            - git diff
             - cd 5.0
             - gulp
           artifacts:
