--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-git": "^2.10.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.1.0",
     "gulp-zip": "^5.0.2",
-    "handlebars-helper-range": "^1.1.1"
+    "handlebars-helper-range": "^1.1.1",
+    "sass": "^1.49.9"
   }
 }
