--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -21,6 +21,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "angularx-qrcode": "^13.0.3",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.9.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.3.0",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "^13.0.0",
     "@angular/cli": "^13.0.0",
     "@angular/compiler-cli": "^13.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^17.0.13",
     "ngx-translate-extract-csv": "^1.1.1",
     "typescript": "~4.4.3"
