--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-zip": "^5.0.2",
     "handlebars-helper-range": "^1.1.1",
+    "prettier": "^2.6.2",
     "sass": "^1.49.9"
   }
 }
