printer: fix disabling multilang

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@
 /5.0/printer/node_modules
 /5.0/printer/src/Styles.xml
 /5.0/printer/src/environments/environment.prod.ts
+/5.0/printer/app-src/environments/environment.prod.ts
 /5.0/queueinfo/queueinfo.css
