--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^13.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/node": "^17.0.13",
+    "ngx-translate-check": "^1.0.2",
     "ngx-translate-extract-csv": "^1.1.1",
     "typescript": "~4.4.3"
   }
