--- a/5.0/printer/angular.json
+++ b/5.0/printer/angular.json
@@ -35,9 +35,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["../styles", "src"]
             },
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -120,9 +118,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["../styles", "app_src"]
             },
-            "styles": [
-              "app_src/styles.scss"
-            ],
+            "styles": ["app_src/styles.scss"],
             "scripts": []
           },
           "configurations": {
