--- a/5.0/display/angular.json
+++ b/5.0/display/angular.json
@@ -31,9 +31,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["../styles"]
             },
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
