--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "5.0/printer"
   ],
   "devDependencies": {
+    "@angular/cli": "^13.0.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
