--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-compile-handlebars": "^0.6.1",
+    "gulp-debug": "^4.0.0",
     "gulp-git": "^2.10.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
