--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-debug": "^4.0.0",
     "gulp-git": "^2.10.1",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "gulp-zip": "^5.0.2",
     "handlebars-helper-range": "^1.1.1",
