--- a/5.0/display/package.json
+++ b/5.0/display/package.json
@@ -26,8 +26,16 @@
     "@angular-devkit/build-angular": "^13.0.0",
     "@angular/cli": "^13.0.0",
     "@angular/compiler-cli": "^13.0.0",
+    "@types/jasmine": "^3.8.0",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^17.0.13",
+    "jasmine-core": "^3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "~1.5.4",
     "typescript": "~4.4.3"
   }
 }
