printer: Mehrsprachigkeit in Beispielkonfiguration

--- a/5.0/printer/src/config.json
+++ b/5.0/printer/src/config.json
@@ -1,10 +1,10 @@
 {
   "groups": [
     {
-      "title": "Prüfungsmanagement",
+      "title": { "de": "Prüfungsmanagement", "en": "exam management" },
       "items": [
         {
-          "title": "Abschlussarbeiten",
+          "title": { "de": "Abschlussarbeiten", "en": "final exams" },
           "queue": "c169b7f0-5147-498a-8921-90e984c5283c"
         },
         {
