--- a/5.0/appointment-ui/angular.json
+++ b/5.0/appointment-ui/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "appointmentui": {
+    "appointment-ui": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
@@ -76,10 +76,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "appointmentui:build:production"
+              "browserTarget": "appointment-ui:build:production"
             },
             "development": {
-              "browserTarget": "appointmentui:build:development"
+              "browserTarget": "appointment-ui:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,7 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "appointmentui:build"
+            "browserTarget": "appointment-ui:build"
           }
         },
         "test": {
