printer / groups: Termineinträge in Gruppenansicht

--- a/5.0/printer/src/config.json
+++ b/5.0/printer/src/config.json
@@ -1,6 +1,16 @@
 {
   "groups": [
     {
+      "type": "appointment",
+      "mode": "scan",
+      "title": "Termine scannen"
+    },
+    {
+      "type": "appointment",
+      "mode": "id",
+      "title": "Termine ID eingeben"
+    },
+    {
       "title": { "de": "Prüfungsmanagement", "en": "exam management" },
       "items": [
         {
