--- a/5.0/appointment-ui/angular.json
+++ b/5.0/appointment-ui/angular.json
@@ -23,7 +23,11 @@
               }
             },
             "assets": [
-              "src/appointments.cshtml",
+              {
+                "glob": "appointments.cshtml",
+                "input": "../../node_modules/vocatis-lib/dist/vocatis-appointments/",
+                "output": ""
+              },
               "src/number.cshtml",
               "src/favicon.ico",
               "src/assets",
