--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "vocatis-standardvorlagen",
   "type": "module",
   "workspaces": [
+    "lib/vocatis",
     "5.0/appointment-ui",
     "5.0/display",
     "5.0/printer"
