--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -25,6 +25,7 @@
     "html-to-image": "^1.11.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
+    "vocatis-lib": "file:../../lib/vocatis",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
