--- a/5.0/printer/angular.json
+++ b/5.0/printer/angular.json
@@ -24,7 +24,7 @@
             },
             "assets": [
               {
-                "glob": "appointments.cshtml",
+                "glob": "*.cshtml",
                 "input": "../../node_modules/vocatis-lib/dist/vocatis-appointments/",
                 "output": ""
               },
