--- a/5.0/display-popup/angular.json
+++ b/5.0/display-popup/angular.json
@@ -88,6 +88,20 @@
           "options": {
             "browserTarget": "display-popup:build"
           }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "assets": ["src/favicon.ico", "src/assets"],
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": ["../styles"]
+            }
+          }
         }
       }
     }
