--- a/5.0/display-popup/package.json
+++ b/5.0/display-popup/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^15.1.5",
     "@angular/platform-browser-dynamic": "^15.1.5",
     "@angular/router": "^15.1.5",
+    "crypto-js": "^4.1.1",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -26,6 +27,7 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "^15.1.6",
     "@angular/compiler-cli": "^15.1.5",
+    "@types/crypto-js": "4.1.1",
     "@types/jasmine": "^4.3.1",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^18.14.0",
