Add license information

--- a/5.0/appointment-ui/package.json
+++ b/5.0/appointment-ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "appointment-ui",
   "version": "0.0.0",
+  "license": "AGPL",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
