--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vocatis-printer",
   "version": "0.0.0",
+  "license": "AGPL",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
