--- a/5.0/display-popup/tsconfig.json
+++ b/5.0/display-popup/tsconfig.json
@@ -17,7 +17,10 @@
     "target": "ES2022",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "paths": {
+      "vocatis-numbers": [ "../../lib/vocatis/dist/vocatis-numbers" ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
