--- a/lib/vocatis/projects/vocatis-appointments/package.json
+++ b/lib/vocatis/projects/vocatis-appointments/package.json
@@ -2,11 +2,11 @@
   "name": "vocatis-appointments",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^15.1.5",
-    "@angular/core": "^15.1.5"
+    "@angular/common": ">=16",
+    "@angular/core": ">=16"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.0"
   },
   "sideEffects": false
 }
