printer: Migrate to static hosting

--- a/5.0/printer/angular.json
+++ b/5.0/printer/angular.json
@@ -23,15 +23,7 @@
               }
             },
             "assets": [
-              {
-                "glob": "*.cshtml",
-                "input": "../../node_modules/vocatis-lib/dist/vocatis-appointments/",
-                "output": ""
-              },
               "src/config.json",
-              "src/groups.cshtml",
-              "src/number.cshtml",
-              "src/queues.cshtml",
               "src/favicon.ico",
               "src/assets",
               "src/Styles.xml"
@@ -56,10 +48,6 @@
                   "maximumError": "5kb"
                 }
               ],
-              "index": {
-                "input": "src/index.cshtml",
-                "output": "index.cshtml"
-              },
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -115,9 +103,7 @@
             "assets": [
               "app_src/favicon.ico",
               "app_src/assets",
-              "app_src/Styles.xml",
-              "app_src/number.cshtml",
-              "app_src/status.cshtml"
+              "app_src/Styles.xml"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["../styles", "app_src"]
@@ -139,10 +125,6 @@
                   "maximumError": "5kb"
                 }
               ],
-              "index": {
-                "input": "app_src/index.cshtml",
-                "output": "index.cshtml"
-              },
               "fileReplacements": [
                 {
                   "replace": "app_src/environments/environment.ts",
