--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@isign/forms-templates": "*",
+    "@isign/isign-services": "*",
+    "@isign/player-extensions": "*",
+    "@isign/vocatis-api": "*",
     "@ng-idle/core": "^14.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -26,7 +30,6 @@
     "html-to-image": "^1.11.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
-    "vocatis-lib": "file:../../lib/vocatis",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
