--- a/5.0/printer/tsconfig.json
+++ b/5.0/printer/tsconfig.json
@@ -17,7 +17,10 @@
     "target": "ES2022",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "paths": {
+      "vocatis-appointments": ["../../lib/vocatis/dist/vocatis-appointments"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
