--- a/lib/vocatis/projects/vocatis-appointments/package.json
+++ b/lib/vocatis/projects/vocatis-appointments/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": ">=16",
-    "@angular/core": ">=16"
+    "@angular/core": ">=16",
+    "@isign/vocatis-api": "*"
   },
   "dependencies": {
     "tslib": "^2.6.0"
