--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -26,7 +26,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "angularx-qrcode": "^16.0.0",
-    "file-saver": "^2.0.5",
+    "file-saver-es": "^2.0.5",
     "html-to-image": "^1.11.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
@@ -36,7 +36,7 @@
     "@angular-devkit/build-angular": "^16.2.12",
     "@angular/cli": "^16.2.12",
     "@angular/compiler-cli": "^16.2.12",
-    "@types/file-saver": "^2.0.5",
+    "@types/file-saver-es": "^2.0.3",
     "@types/node": "^20.11.16",
     "@types/qrcode": "^1.5.5",
     "ngx-translate-check": "^1.0.2",
