--- a/5.0/printer/angular.json
+++ b/5.0/printer/angular.json
@@ -12,6 +12,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["qrcode"],
             "outputPath": "dist/printer",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -39,12 +40,12 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "600kb",
                   "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
+                  "maximumWarning": "4.5kb",
                   "maximumError": "5kb"
                 }
               ],
