--- a/package.json
+++ b/package.json
@@ -12,20 +12,17 @@
   ],
   "devDependencies": {
     "del": "^7.0.0",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-compile-handlebars": "^0.6.1",
-    "gulp-debug": "^5.0.1",
+    "gulp": "^5.0.0",
     "gulp-git": "^2.10.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.4",
-    "gulp-sass": "^5.1.0",
     "gulp-zip": "^6.0.0",
+    "handlebars": "^4.7.8",
     "handlebars-helper-range": "^1.1.1",
     "husky": "^9.0.10",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "sass": "^1.70.0"
+    "through2": "^4.0.2"
   },
   "lint-staged": {
     "*.{js,css,scss,md,ts,json}": "prettier --write"
