Upgrade to angular 18

--- a/5.0/appointment-ui/angular.json
+++ b/5.0/appointment-ui/angular.json
@@ -10,28 +10,26 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/appointment-ui",
+            "outputPath": {
+              "base": "dist/appointment-ui"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "optimization": {
               "styles": {
                 "inlineCritical": false
               }
             },
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              "src/Styles.xml"
-            ],
+            "assets": ["src/favicon.ico", "src/assets", "src/Styles.xml"],
             "stylePreprocessorOptions": {
               "includePaths": ["../styles"]
             },
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "browser": "src/main.ts"
           },
           "configurations": {
             "production": {
@@ -56,9 +54,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
@@ -70,10 +66,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "appointment-ui:build:production"
+              "buildTarget": "appointment-ui:build:production"
             },
             "development": {
-              "browserTarget": "appointment-ui:build:development"
+              "buildTarget": "appointment-ui:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +77,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "appointment-ui:build"
+            "buildTarget": "appointment-ui:build"
           }
         },
         "test": {
