--- a/5.0/display-popup/tsconfig.json
+++ b/5.0/display-popup/tsconfig.json
@@ -5,12 +5,12 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
-    "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
@@ -19,7 +19,7 @@
     "lib": ["es2018", "dom"],
     "useDefineForClassFields": false,
     "paths": {
-      "vocatis-numbers": [ "../../lib/vocatis/dist/vocatis-numbers" ]
+      "vocatis-numbers": ["../../lib/vocatis/dist/vocatis-numbers"]
     }
   },
   "angularCompilerOptions": {
