--- a/5.0/display/package.json
+++ b/5.0/display/package.json
@@ -10,37 +10,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@isign/forms-templates": "*",
-    "@isign/isign-services": "*",
-    "@isign/player-extensions": "*",
-    "@isign/vocatis-api": "*",
+    "@angular/animations": "^18.1.1",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@isign/forms-templates": ">=8.0.14",
+    "@isign/isign-services": ">=8.0.14",
+    "@isign/player-extensions": ">=8.0.14",
+    "@isign/vocatis-api": ">=8.0.14",
+    "@schematics/angular": "^18.1.1",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "^0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.12",
-    "@angular/cli": "^16.2.12",
-    "@angular/compiler-cli": "^16.2.12",
+    "@angular-devkit/build-angular": "^18.1.1",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^20.11.16",
-    "jasmine-core": "^5.1.1",
+    "jasmine-core": "^5.2.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.0"
+    "typescript": "~5.5.4"
   }
 }
