--- a/5.0/printer/package.json
+++ b/5.0/printer/package.json
@@ -10,37 +10,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@isign/forms-templates": "*",
-    "@isign/isign-services": "*",
-    "@isign/player-extensions": "*",
-    "@isign/vocatis-api": "*",
-    "@ng-idle/core": "^14.0.0",
+    "@angular/animations": "^18.1.1",
+    "@angular/common": "^18.1.1",
+    "@angular/compiler": "^18.1.1",
+    "@angular/core": "^18.1.1",
+    "@angular/forms": "^18.1.1",
+    "@angular/platform-browser": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
+    "@isign/forms-templates": ">=8.0.14",
+    "@isign/isign-services": ">=8.0.14",
+    "@isign/player-extensions": ">=8.0.14",
+    "@isign/vocatis-api": ">=8.0.14",
+    "@ng-idle/core": "^15.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "angularx-qrcode": "^16.0.0",
+    "@schematics/angular": "^18.1.1",
+    "angularx-qrcode": "^18.0.1",
     "file-saver-es": "^2.0.5",
     "html-to-image": "^1.11.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.12",
-    "@angular/cli": "^16.2.12",
-    "@angular/compiler-cli": "^16.2.12",
+    "@angular/build": "^18.1.1",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
     "@types/file-saver-es": "^2.0.3",
     "@types/node": "^20.11.16",
     "@types/qrcode": "^1.5.5",
     "ngx-translate-check": "^1.0.2",
     "ngx-translate-extract-csv": "^1.1.1",
-    "typescript": "~5.1.0"
+    "typescript": "~5.5.4"
   }
 }
