--- a/lib/vocatis/package.json
+++ b/lib/vocatis/package.json
@@ -14,19 +14,19 @@
   "dependencies": {
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular/cli": "~16.2.12",
-    "@angular/compiler-cli": "^16.2.12",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
     "@types/jasmine": "^5.1.4",
-    "jasmine-core": "^5.1.1",
+    "jasmine-core": "^5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^16.2.3",
-    "typescript": "~5.1.0"
+    "ng-packagr": "^18.1.0",
+    "typescript": "~5.5.4"
   }
 }
