--- a/5.0/display-popup/package.json
+++ b/5.0/display-popup/package.json
@@ -17,6 +17,10 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@isign/forms-templates": "*",
+    "@isign/isign-services": "*",
+    "@isign/player-extensions": "*",
+    "@isign/vocatis-api": "*",
     "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.0",
