--- a/5.0/appointment-ui/angular.json
+++ b/5.0/appointment-ui/angular.json
@@ -13,7 +13,8 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "dist/appointment-ui"
+              "base": "dist/appointment-ui",
+              "browser": ""
             },
             "index": "src/index.html",
             "polyfills": ["zone.js"],
