--- a/5.0/display-popup/angular.json
+++ b/5.0/display-popup/angular.json
@@ -13,7 +13,8 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "dist/display-popup"
+              "base": "dist/display-popup",
+              "browser": ""
             },
             "index": "src/index.html",
             "polyfills": ["src/polyfills.ts"],
